--- a/index.html
+++ b/index.html
@@ -7,31 +7,33 @@
     <h1>Broadway Design</h1>
 
     <nav>
-      <h5>Home</h5>
-      <h5>About</h5>
-      <h5>Work</h5>
-      <h5>Team</h5>
-      <h5>Contact</h5>
+      <h5 id="home">Home</h5>
+      <h5><a href ="#about">About<a></h5>
+      <h5><a href ="#work">Work</a></h5>
+      <h5><a href ="#team">Team</a></h5>
+      <h5><a href ="#contact">Contact</a></h5>
     </nav>
 
-    <h2>Our Process</h2>
+    <h2 id ="about">Our Process</h2>
       <h4> Identify</h4>
         <p>We focus on the most important details.</p>
       <h4>Understand</h4>
         <p>We study our projects inside and out.</p>
       <h4>Execute</h4>
-        <p>Weput eveerything we have into our work.</p>
+        <p>We put eveerything we have into our work.</p>
 
     <h3>Designed in New York</h3>
-      <h4>Portfolio</h4>
+      <h4 id ="work">Portfolio</h4>
         <p>Coming Soon</p>
-      <h4>Team</h4>
+
+      <h4 id ="team">Team</h4>
         <p>We are Hiring!</p>
-      <h4>Contact</h4>
+
+      <h4 id ="contact">Contact</h4>
         <p>Phone: (555)-555-5555</p>
         <p>Email: test@example.com</p>
         <p>Twitter: @test</p>
 
-      <h6>&copy; Broadway 2016 Home About Work Team Contact</h6>
+      <h6>&copy; Broadway 2016 <a href ="#home">Home</a> <a href ="#about">About<a> <a href ="#work">Work</a> <a href ="#team">Team</a> <a href ="#contact">Contact</a></h6>
   </body>
 </html>
