--- a/index.html
+++ b/index.html
@@ -1,38 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet"
     <title>Broadway Design</title>
   </head>
   <body>
     <h1>Broadway Design</h1>
 
     <nav>
-      <h5 id="home">Home</h5>
+      <h5><a id="home"><a href ="#home">Home<a></h5>
       <h5><a href ="#about">About<a></h5>
       <h5><a href ="#work">Work</a></h5>
       <h5><a href ="#team">Team</a></h5>
       <h5><a href ="#contact">Contact</a></h5>
     </nav>
-
-    <h2 id ="about">Our Process</h2>
+    <div id="about">
+      <h2>Our Process</h2>
+      <img src=./resources/images/identify.svg />
       <h4> Identify</h4>
-        <p>We focus on the most important details.</p>
+      <p>We focus on the most important details.</p>
+
+      <img src="./resources/images/understand.svg" />
       <h4>Understand</h4>
-        <p>We study our projects inside and out.</p>
+      <p>We study our projects inside and out.</p>
+
+      <img src="./resources/images/execute.svg" />
       <h4>Execute</h4>
-        <p>We put eveerything we have into our work.</p>
+      <p>We put everything we have into our work.</p>
+    </div>
 
     <h3>Designed in New York</h3>
-      <h4 id ="work">Portfolio</h4>
-        <p>Coming Soon</p>
+    <div id ="work">
+      <h4>Portfolio</h4>
+      <p>Coming Soon</p>
+    </div>
+    <div id ="team">
+      <h4>Team</h4>
+      <p>We are Hiring!</p>
+    </div>
 
-      <h4 id ="team">Team</h4>
-        <p>We are Hiring!</p>
-
-      <h4 id ="contact">Contact</h4>
-        <p>Phone: (555)-555-5555</p>
-        <p>Email: test@example.com</p>
-        <p>Twitter: @test</p>
+    <div id="contact">
+      <h4>Contact</h4>
+      <p>Phone: (555)-555-5555</p>
+      <p>Email: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
 
       <h6>&copy; Broadway 2016 <a href ="#home">Home</a> <a href ="#about">About<a> <a href ="#work">Work</a> <a href ="#team">Team</a> <a href ="#contact">Contact</a></h6>
   </body>
