--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Broadway Design</title>
   </head>
   <body>
+  <div id="titleimage">
     <h1>Broadway Design</h1>
-
     <nav>
       <h5><a id="home"><a href ="#home">Home<a></h5>
       <h5><a href ="#about">About<a></h5>
@@ -14,38 +14,42 @@
       <h5><a href ="#team">Team</a></h5>
       <h5><a href ="#contact">Contact</a></h5>
     </nav>
-    <div id="about">
-      <h2>Our Process</h2>
-      <img src=./resources/images/identify.svg />
-      <h4> Identify</h4>
-      <p>We focus on the most important details.</p>
+  </div>
 
-      <img src="./resources/images/understand.svg" />
-      <h4>Understand</h4>
-      <p>We study our projects inside and out.</p>
+  <div id="about">
+    <h2>Our Process</h2>
+    <img src=./resources/images/identify.svg />
+    <h4> Identify</h4>
+    <p>We focus on the most important details.</p>
 
-      <img src="./resources/images/execute.svg" />
-      <h4>Execute</h4>
-      <p>We put everything we have into our work.</p>
-    </div>
+    <img src="./resources/images/understand.svg" />
+    <h4>Understand</h4>
+    <p>We study our projects inside and out.</p>
 
-    <h3>Designed in New York</h3>
-    <div id ="work">
-      <h4>Portfolio</h4>
-      <p>Coming Soon</p>
-    </div>
-    <div id ="team">
-      <h4>Team</h4>
-      <p>We are Hiring!</p>
-    </div>
+    <img src="./resources/images/execute.svg" />
+    <h4>Execute</h4>
+    <p>We put everything we have into our work.</p>
+  </div>
 
-    <div id="contact">
-      <h4>Contact</h4>
-      <p>Phone: (555)-555-5555</p>
-      <p>Email: test@example.com</p>
-      <p>Twitter: @test</p>
-    </div>
+    <h3 class="titleimage">Designed in New York</h3>
 
-      <h6>&copy; Broadway 2016 <a href ="#home">Home</a> <a href ="#about">About<a> <a href ="#work">Work</a> <a href ="#team">Team</a> <a href ="#contact">Contact</a></h6>
+  <div id ="work">
+    <h4>Portfolio</h4>
+    <p>Coming Soon</p>
+  </div>
+
+  <div id ="team">
+    <h4>Team</h4>
+    <p>We are Hiring!</p>
+  </div>
+
+  <div id="contact">
+    <h4>Contact</h4>
+    <p>Phone: (555)-555-5555</p>
+    <p>Email: test@example.com</p>
+    <p>Twitter: @test</p>
+  </div>
+
+ <h6>&copy; Broadway 2016 <a href ="#home">Home</a> <a href ="#about">About<a> <a href ="#work">Work</a> <a href ="#team">Team</a> <a href ="#contact">Contact</a></h6>
   </body>
 </html>
