everything but backgroundphoto.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
   <div id="titleimage">
-    <h1>Broadway Design</h1>
+    <h1><a id="home">Broadway Design</h1>
     <nav>
-      <h5><a id="home"><a href ="#home">Home<a></h5>
+      <h5><a href ="#home">Home<a></h5>
       <h5><a href ="#about">About<a></h5>
       <h5><a href ="#work">Work</a></h5>
       <h5><a href ="#team">Team</a></h5>
@@ -16,7 +16,7 @@
     </nav>
   </div>
 
-  <div id="about">
+  <div class="about">
     <h2>Our Process</h2>
     <img src=./resources/images/identify.svg />
     <h4> Identify</h4>
