--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <title>Broadway Design</title>
   </head>
   <body>
-  <div id="titleimage">
+  <div class="titleimage">
     <h1><a id="home">Broadway Design</h1>
     <nav>
-      <h5><a href ="#home">Home<a></h5>
-      <h5><a href ="#about">About<a></h5>
-      <h5><a href ="#work">Work</a></h5>
-      <h5><a href ="#team">Team</a></h5>
-      <h5><a href ="#contact">Contact</a></h5>
+      <ul>
+        <li><a href ="#home">Home<a></li>
+        <li><a href ="#about">About<a></li>
+        <li><a href ="#work">Work</a></li>
+        <li><a href ="#team">Team</a></li>
+        <li><a href ="#contact">Contact</a></li>
+      <ul>
     </nav>
   </div>
 
@@ -50,6 +52,14 @@
     <p>Twitter: @test</p>
   </div>
 
- <h6>&copy; Broadway 2016 <a href ="#home">Home</a> <a href ="#about">About<a> <a href ="#work">Work</a> <a href ="#team">Team</a> <a href ="#contact">Contact</a></h6>
+ <footer>
+   <p> &copy; Broadway 2016
+     <a href ="#home">Home</a>
+     <a href ="#about">About<a>
+       <a href ="#work">Work</a>
+       <a href ="#team">Team</a>
+       <a href ="#contact">Contact</a></p>
+     </footer>
+     
   </body>
 </html>
